gitops/cicd/selenium/selenium-hub-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: selenium
  name: selenium-hub
  namespace: cicd
spec:
  host: selenium-hub-cicd.apps.example.com
  port:
    targetPort: 4444-tcp
  subdomain: ""
  to:
    kind: Service
    name: selenium-hub
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    host: selenium-hub-cicd.apps.example.com
    routerCanonicalHostname: apps.example.com
    routerName: default
    wildcardPolicy: None
